Top of Page Fixed
Acme logo was off-center with "my demo site." added the proper stack and will work my way down.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,14 @@ border-radius: 12px 12px 0px 0px; }
 	font-family: 'Devonshire', cursive;
   color: #E35335;
 }
-------------------------------------------------
 
-#header a#logo1 img
+#header a#logo1 img { 
+margin-top: 20px;
+margin-left: 20px;
+margin-bottom: 20px;
+}
 
-#header #toplink
+#header #toplink 
 
 #footer { 
 margin-top: 20px;
